src/objects/OrderRequest__c.object
<CustomObject>
    <description>This object is used for WRF-POLK.</description>
    <fields>
        <fullName>AvailabilityCount__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Availability Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustPostProcessing__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Cust./Post Processing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CustomDescription__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Custom Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CutbackOptions__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Cutback Options</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DesiredCount__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Desired Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FormatOrder__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Output Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fmt 001 - Name,C.Address,Phone</fullName>
                </value>
                <value>
                    <fullName>Fmt 011 - F.Name,Address,Phone</fullName>
                </value>
                <value>
                    <fullName>Fmt 012 - F.Name,C.Address,DMA,Vehicle Desc, Phone</fullName>
                </value>
                <value>
                    <fullName>Fmt 013 - F.Name,C.Address,Vehicle,Phone</fullName>
                </value>
                <value>
                    <fullName>Fmt 014 - F.Name,C.Address,Phone</fullName>
                </value>
                <value>
                    <fullName>Fmt 015 - F.Name,C.Address</fullName>
                </value>
                <value>
                    <fullName>Fmt 017 - C.Name,C.Address</fullName>
                </value>
                <value>
                    <fullName>Fmt 018 - F.Name,C.Address,Vehicle</fullName>
                </value>
                <value>
                    <fullName>Fmt 021 - Fmt 13 w/o vehicle - w/o phone</fullName>
                </value>
                <value>
                    <fullName>Fmt 026 - Fmt 13 w/o vehicle - with phone</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JobQueryID__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Job#/Query ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyfieldCode__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Keyfield/Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>This field is used for data integration to store legacy system id in WRF POLK application.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is used for data integration to store legacy system id in WRF POLK application.</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7046: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderRequestAttachements__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Order Request Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLCJob__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>PLC Job</label>
        <referenceTo>PLCJob__c</referenceTo>
        <relationshipLabel>Order Requests</relationshipLabel>
        <relationshipName>OrderRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostSortDecription__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Post-Sort Decription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PostSort__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Post-Sort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ascending</fullName>
                </value>
                <value>
                    <fullName>Descending</fullName>
                </value>
                <value>
                    <fullName>Combo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreSortDescription__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Pre-Sort Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PreSort__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Pre-Sort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ascending</fullName>
                </value>
                <value>
                    <fullName>Descending</fullName>
                </value>
                <value>
                    <fullName>Combo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductionComments__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Production Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Programmer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Programmer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmittedDateTime__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Submitted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WorkRequestForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Work Request Form</label>
        <referenceTo>WorkRequestForm__c</referenceTo>
        <relationshipLabel>Order Requests</relationshipLabel>
        <relationshipName>Order_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Request</label>
    <listViews>
        <fullName>JeffAllen_OrderRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>Jeff Allen</label>
        <queue>JeffAllen</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MCMAnalytics_OrderRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>MCM - Analytics</label>
        <queue>MCMAnalytics</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MarketReportingAnalytics_OrderRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>Market Reporting - Analytics</label>
        <queue>MarketReportingAnalytics</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MarketReportingCAP_OrderRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>Market Reporting - CAP</label>
        <queue>MarketReportingCAP</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MarketReportingLoyalty_OrderRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>Market Reporting - Loyalty</label>
        <queue>MarketReportingLoyalty</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MarketReportingOEMStat_OrderRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>Market Reporting - OEM Stat</label>
        <queue>MarketReportingOEMStat</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VINtelligenceRecall_OrderRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>VINtelligence - Recall</label>
        <queue>VINtelligenceRecall</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VINtelligenceSWS_OrderRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>VINtelligence - SWS</label>
        <queue>VINtelligenceSWS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>OR-{000000}</displayFormat>
        <label>Order Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>